// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`regression snapshots matches snapshot: create child form 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div
      class="flex items-center justify-between mb-6 shrink-0"
    >
      <div>
        <h1
          class="text-2xl font-semibold"
        >
          Add Session Type
        </h1>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border text-sm cursor-pointer hover:bg-gray-200 transition-all"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-black text-white text-sm disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 transition-all"
        >
          Add Session Type
        </button>
      </div>
    </div>
    <div>
      <div
        class="grid grid-cols-1 space-y-4 md:grid-cols-2 md:gap-10 max-w-2xl md:max-w-full"
      >
        <div
          class="min-h-0"
        >
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-1"
            >
              Session Type Image
            </label>
            <div
              class="relative flex items-center justify-center rounded-lg border-2 border-dashed cursor-pointer transition hover:border-[#AB8C4B]/60 hover:bg-gray-50
                    border-gray-300 h-40"
            >
              <div
                class="text-center text-gray-400"
              >
                <span
                  data-testid="icon-upload"
                />
                <p
                  class="text-sm"
                >
                  Click to upload image
                </p>
                <p
                  class="text-xs mt-1"
                >
                  JPG, PNG, WebP · Max 10 MB
                </p>
              </div>
            </div>
            <input
              accept="image/jpeg,image/png,image/webp"
              class="hidden"
              type="file"
            />
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Session Type Name *
            </label>
            <input
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="e.g. Ivory"
              type="text"
              value=""
            />
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Category *
            </label>
            <select
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
            >
              <option
                disabled=""
                value=""
              >
                Select a category
              </option>
              <option
                value="Weddings"
              >
                Weddings
              </option>
              <option
                value="Portraits"
              >
                Portraits
              </option>
            </select>
            <p
              class="text-xs text-gray-400 mb-2"
            >
              The category this session type belongs to.
            </p>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Description *
            </label>
            <textarea
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="Short description shown to clients"
              rows="3"
            />
          </div>
        </div>
        <div
          class="space-y-5 mt-5 md:mt-0 md:overflow-y-auto md:min-h-0 md:pr-2 border border-gray-200 rounded-lg p-3"
        >
          <div
            class="grid grid-cols-2 gap-4"
          >
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Base Price ($) *
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="375.00"
                step="0.01"
                type="number"
                value=""
              />
            </div>
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Price Display Label
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                placeholder="FROM: $375"
                type="text"
                value=""
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Overrides price number if set
              </p>
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-4"
          >
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Duration (minutes) *
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="60"
                type="number"
                value=""
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Used to block the time slot on booking
              </p>
            </div>
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Display Order
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="0"
                type="number"
                value="0"
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Lower = shown first
              </p>
            </div>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              What's Included
            </label>
            <div
              data-testid="dnd-provider"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="flex gap-2 items-center "
                >
                  <span
                    class="text-gray-400 hover:text-gray-600 cursor-grab active:cursor-grabbing touch-none"
                  >
                    <span
                      data-testid="icon-grip"
                    />
                  </span>
                  <input
                    class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B] flex-1"
                    placeholder="e.g. 1 Hour Coverage"
                    type="text"
                    value=""
                  />
                  <button
                    class="p-1 rounded hover:bg-red-50 disabled:opacity-30 cursor-pointer"
                    disabled=""
                    type="button"
                  >
                    <span
                      data-testid="icon-trash"
                    />
                  </button>
                </div>
              </div>
            </div>
            <button
              class="mt-2 flex items-center gap-1 text-xs text-[#AB8C4B] hover:text-[#725e32] underline cursor-pointer"
              type="button"
            >
              <span
                data-testid="icon-plus"
              />
               Add bullet point
            </button>
          </div>
          <div
            class="flex items-center gap-3 pt-2"
          >
            <input
              class="h-4 w-4"
              id="active-toggle"
              type="checkbox"
            />
            <label
              class="text-md"
              for="active-toggle"
            >
              Visible to clients (active)
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: create master form 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div
      class="flex items-center justify-between mb-6 shrink-0"
    >
      <div>
        <h1
          class="text-2xl font-semibold"
        >
          Create Category
        </h1>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border text-sm cursor-pointer hover:bg-gray-200 transition-all"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-black text-white text-sm disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 transition-all"
        >
          Create Category
        </button>
      </div>
    </div>
    <div>
      <div
        class="grid grid-cols-1 space-y-4 md:grid-cols-2 md:gap-10 max-w-2xl md:max-w-full"
      >
        <div
          class="min-h-0"
        >
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-1"
            >
              Category Image
            </label>
            <div
              class="relative flex items-center justify-center rounded-lg border-2 border-dashed cursor-pointer transition hover:border-[#AB8C4B]/60 hover:bg-gray-50
                    border-gray-300 h-40"
            >
              <div
                class="text-center text-gray-400"
              >
                <span
                  data-testid="icon-upload"
                />
                <p
                  class="text-sm"
                >
                  Click to upload image
                </p>
                <p
                  class="text-xs mt-1"
                >
                  JPG, PNG, WebP · Max 10 MB
                </p>
              </div>
            </div>
            <input
              accept="image/jpeg,image/png,image/webp"
              class="hidden"
              type="file"
            />
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Category Name *
            </label>
            <input
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="e.g. Weddings"
              type="text"
              value=""
            />
            <p
              class="text-xs text-gray-400 mt-1"
            >
              This name is shown as the category card on the booking page.
            </p>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Category *
            </label>
            <input
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="e.g. Weddings"
              type="text"
              value=""
            />
            <p
              class="text-xs text-gray-400 mb-2"
            >
              The category groups related session types together (e.g. all Wedding packages).
            </p>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Description *
            </label>
            <textarea
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="Short description shown to clients"
              rows="3"
            />
          </div>
        </div>
        <div
          class="space-y-5 mt-5 md:mt-0 md:overflow-y-auto md:min-h-0 md:pr-2 border border-gray-200 rounded-lg p-3"
        >
          <div
            class="grid grid-cols-2 gap-4"
          >
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Base Price ($) *
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="375.00"
                step="0.01"
                type="number"
                value=""
              />
            </div>
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Price Display Label
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                placeholder="FROM: $375"
                type="text"
                value=""
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Overrides price number if set
              </p>
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-4"
          >
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Duration (minutes) *
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="60"
                type="number"
                value=""
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Used to block the time slot on booking
              </p>
            </div>
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Display Order
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="0"
                type="number"
                value="0"
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Lower = shown first
              </p>
            </div>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              What's Included
            </label>
            <div
              data-testid="dnd-provider"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="flex gap-2 items-center "
                >
                  <span
                    class="text-gray-400 hover:text-gray-600 cursor-grab active:cursor-grabbing touch-none"
                  >
                    <span
                      data-testid="icon-grip"
                    />
                  </span>
                  <input
                    class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B] flex-1"
                    placeholder="e.g. 1 Hour Coverage"
                    type="text"
                    value=""
                  />
                  <button
                    class="p-1 rounded hover:bg-red-50 disabled:opacity-30 cursor-pointer"
                    disabled=""
                    type="button"
                  >
                    <span
                      data-testid="icon-trash"
                    />
                  </button>
                </div>
              </div>
            </div>
            <button
              class="mt-2 flex items-center gap-1 text-xs text-[#AB8C4B] hover:text-[#725e32] underline cursor-pointer"
              type="button"
            >
              <span
                data-testid="icon-plus"
              />
               Add bullet point
            </button>
          </div>
          <div
            class="flex items-center gap-3 pt-2"
          >
            <input
              class="h-4 w-4"
              id="active-toggle"
              type="checkbox"
            />
            <label
              class="text-md"
              for="active-toggle"
            >
              Visible to clients (active)
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: edit mode with loaded data 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div
      class="flex items-center justify-between mb-6 shrink-0"
    >
      <div>
        <h1
          class="text-2xl font-semibold"
        >
          Edit Session Type
        </h1>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border text-sm cursor-pointer hover:bg-gray-200 transition-all"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-black text-white text-sm disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 transition-all"
          disabled=""
        >
          Save Changes
        </button>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center grow text-gray-500"
    >
      <span
        data-testid="icon-loader"
      />
      <p
        class="text-sm"
      >
        Loading session type editor...
      </p>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: error state in edit mode 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div
      class="flex items-center justify-between mb-6 shrink-0"
    >
      <div>
        <h1
          class="text-2xl font-semibold"
        >
          Edit Session Type
        </h1>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border text-sm cursor-pointer hover:bg-gray-200 transition-all"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-black text-white text-sm disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 transition-all"
          disabled=""
        >
          Save Changes
        </button>
      </div>
    </div>
    <div>
      <div
        class="grid grid-cols-1 space-y-4 md:grid-cols-2 md:gap-10 max-w-2xl md:max-w-full"
      >
        <div
          class="min-h-0"
        >
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-1"
            >
              Session Type Image
            </label>
            <div
              class="relative flex items-center justify-center rounded-lg border-2 border-dashed cursor-pointer transition hover:border-[#AB8C4B]/60 hover:bg-gray-50
                    border-gray-300 h-40"
            >
              <div
                class="text-center text-gray-400"
              >
                <span
                  data-testid="icon-upload"
                />
                <p
                  class="text-sm"
                >
                  Click to upload image
                </p>
                <p
                  class="text-xs mt-1"
                >
                  JPG, PNG, WebP · Max 10 MB
                </p>
              </div>
            </div>
            <input
              accept="image/jpeg,image/png,image/webp"
              class="hidden"
              type="file"
            />
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Session Type Name *
            </label>
            <input
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="e.g. Ivory"
              type="text"
              value=""
            />
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Category *
            </label>
            <select
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
            >
              <option
                disabled=""
                value=""
              >
                Select a category
              </option>
            </select>
            <p
              class="text-xs text-gray-400 mb-2"
            >
              The category this session type belongs to.
            </p>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              Description *
            </label>
            <textarea
              class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
              placeholder="Short description shown to clients"
              rows="3"
            />
          </div>
        </div>
        <div
          class="space-y-5 mt-5 md:mt-0 md:overflow-y-auto md:min-h-0 md:pr-2 border border-gray-200 rounded-lg p-3"
        >
          <div
            class="grid grid-cols-2 gap-4"
          >
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Base Price ($) *
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="375.00"
                step="0.01"
                type="number"
                value=""
              />
            </div>
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Price Display Label
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                placeholder="FROM: $375"
                type="text"
                value=""
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Overrides price number if set
              </p>
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-4"
          >
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Duration (minutes) *
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="60"
                type="number"
                value=""
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Used to block the time slot on booking
              </p>
            </div>
            <div>
              <label
                class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
              >
                Display Order
              </label>
              <input
                class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B]"
                min="0"
                placeholder="0"
                type="number"
                value="0"
              />
              <p
                class="text-xs text-gray-400 mt-1"
              >
                Lower = shown first
              </p>
            </div>
          </div>
          <div>
            <label
              class="block text-xs font-medium text-gray-600 uppercase tracking-wide mt-2"
            >
              What's Included
            </label>
            <div
              data-testid="dnd-provider"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="flex gap-2 items-center "
                >
                  <span
                    class="text-gray-400 hover:text-gray-600 cursor-grab active:cursor-grabbing touch-none"
                  >
                    <span
                      data-testid="icon-grip"
                    />
                  </span>
                  <input
                    class="w-full border rounded-lg px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-[#AB8C4B]/40 focus:border-[#AB8C4B] flex-1"
                    placeholder="e.g. 1 Hour Coverage"
                    type="text"
                    value=""
                  />
                  <button
                    class="p-1 rounded hover:bg-red-50 disabled:opacity-30 cursor-pointer"
                    disabled=""
                    type="button"
                  >
                    <span
                      data-testid="icon-trash"
                    />
                  </button>
                </div>
              </div>
            </div>
            <button
              class="mt-2 flex items-center gap-1 text-xs text-[#AB8C4B] hover:text-[#725e32] underline cursor-pointer"
              type="button"
            >
              <span
                data-testid="icon-plus"
              />
               Add bullet point
            </button>
          </div>
          <div
            class="flex items-start gap-3 rounded-lg border border-[#AB8C4B]/30 bg-[#AB8C4B]/5 p-4"
          >
            <input
              class="h-4 w-4 mt-0.5 disabled:opacity-50 disabled:cursor-not-allowed"
              id="is-master"
              type="checkbox"
            />
            <label
              class="text-sm"
              for="is-master"
            >
              <span
                class="font-medium"
              >
                Category representative (master)
              </span>
              <p
                class="text-sm text-gray-500 mt-0.5"
              >
                The master is shown as the category card on the booking page. Its image and name represent the entire category. Only one session type per category can be the master.
              </p>
            </label>
          </div>
          <div
            class="flex items-center gap-3 pt-2"
          >
            <input
              class="h-4 w-4"
              id="active-toggle"
              type="checkbox"
            />
            <label
              class="text-md"
              for="active-toggle"
            >
              Visible to clients (active)
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`regression snapshots matches snapshot: loading state in edit mode 1`] = `
<div>
  <div
    class="w-full h-full flex flex-col"
  >
    <div
      class="flex items-center justify-between mb-6 shrink-0"
    >
      <div>
        <h1
          class="text-2xl font-semibold"
        >
          Edit Session Type
        </h1>
      </div>
      <div
        class="flex gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border text-sm cursor-pointer hover:bg-gray-200 transition-all"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-black text-white text-sm disabled:opacity-50 disabled:cursor-not-allowed cursor-pointer hover:bg-gray-700 transition-all"
          disabled=""
        >
          Save Changes
        </button>
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center grow text-gray-500"
    >
      <span
        data-testid="icon-loader"
      />
      <p
        class="text-sm"
      >
        Loading session type editor...
      </p>
    </div>
  </div>
</div>
`;
